prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-prod
  template:
    metadata:
      labels:
        app: frontend-prod
    spec:
      containers:
      - name: frontend
        # CI pipeline'ınız bu satırı güncelleyecek
        image: docker.io/omerfeyzioglu/projectwizard-frontend:initial-tag
        ports:
        - containerPort: 80 # Nginx portu
