prod/backend-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-prod-svc
spec:
  selector:
    app: backend-api-prod
  ports:
  - port: 80
    targetPort: 8080
