prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-prod-svc
spec:
  selector:
    app: frontend-prod
  ports:
  - port: 80
    targetPort: 80
